--- a/WEBBAGE/HOME/index1.html
+++ b/WEBBAGE/HOME/index1.html
@@ -13,10 +13,10 @@
 <body>
 
 <div class="topnav" id="myTopnav">
-    <a href="#home" class="active">Home</a>
-    <a href="#contact">Contact</a>
-    <a href="#contact">about us</a>
-    <a href="#contact">Konzept</a>
+    <a href="#" class="active">Home</a>
+    <a href="#">Contact</a>
+    <a href="#">About us</a>
+    <a href="#">Konzept</a>
     <div class="dropdown">
         <button class="dropbtn">Shop
             <i class="fa fa-caret-down"></i>
@@ -34,11 +34,10 @@
         </button>
         <div class="dropdown-content">
             <a href="#">fotos</a>
-            <a href="#">video</a>
+            <a href="Video/video.html">video</a>
             <a href="#">wallpaper</a>
         </div>
     </div>
-    <a href="#about">About</a>
     <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
 
@@ -131,10 +130,10 @@
 
 <!-- Footer -->
 <footer id="main-footer" class="grid">
-    <a href="#"  id="sozial" class="fa fa-facebook"></a>
-    <a href="#" id="sozial" class="fa fa-twitter"></a>
-    <a href="#" id="sozial" class="fa fa-google"></a>
-    <a href="#"  id="sozial" class="fa fa-youtube"></a>
+    <a href="#"  id="sozial1" class="fa fa-facebook"></a>
+    <a href="#" id="sozial2" class="fa fa-twitter"></a>
+    <a href="#" id="sozial3" class="fa fa-google"></a>
+    <a href="#"  id="sozial4" class="fa fa-youtube"></a>
 </footer>
 
 
