neue seite contact us

--- a/WEBBAGE/Spreewaldgurken/Home/index.html
+++ b/WEBBAGE/Spreewaldgurken/Home/index.html
@@ -14,7 +14,7 @@
 
 <div class="topnav" id="myTopnav">
     <a href="#" class="active">Home</a>
-    <a href="#">Contact</a>
+    <a href="#">Contact us</a>
     <a href="#">About us</a>
     <a href="#">Konzept</a>
     <div class="dropdown">
