Sport, Xml, Shop

--- a/WEBBAGE/Spreewaldgurken/Shop/Hollydays/Hollydays.html
+++ b/WEBBAGE/Spreewaldgurken/Shop/Hollydays/Hollydays.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
     <meta charset="UTF-8">
     <title>SpreewaldgurckenGalrie</title>
@@ -7,15 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link href = "Style.css" rel= "stylesheet" type= "text/css" media="all">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-    <script src="Script.js"></script>
+    <script src="XMLReader.js"></script>
 </head>
 <body>
 
 <!--navagation-->
 <div class="topnav" id="myTopnav">
     <a href="#" class="active">Home</a>
-    <a href="#">Contact us</a>
+    <a href="#">Contact</a>
     <a href="#">About us</a>
     <a href="#">Konzept</a>
     <div class="dropdown">
@@ -35,7 +34,7 @@
         </button>
         <div class="dropdown-content">
             <a href="#">fotos</a>
-            <a href="#">video</a>
+            <a href="video.html">video</a>
             <a href="#">wallpaper</a>
         </div>
     </div>
@@ -46,22 +45,8 @@
 
 
 <!-- Section A -->
+<div id="xmlDataContainer"></div>
 
-<h3>Contact Form</h3>
-
-<div class="container">
-    <form action="">
-        <label for="fname">First Name</label>
-        <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
-        <label for="lname">Last Name</label>
-        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-        <label for="subject">Subject</label>
-        <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-
-        <input type="submit" value="Submit">
-    </form>
-</div>
 
 
 <!-- Section B -->
