--- a/WEBBAGE/Spreewaldgurken/Home/index.html
+++ b/WEBBAGE/Spreewaldgurken/Home/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link href = "Style.css" rel= "stylesheet" type= "text/css" media="all">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
    <script src="Script.js"></script>
 
 </head>
@@ -34,7 +33,7 @@
         </button>
         <div class="dropdown-content">
             <a href="#">fotos</a>
-            <a href="Video/video.html">video</a>
+            <a href="#">video</a>
             <a href="#">wallpaper</a>
         </div>
     </div>
