--- a/WEBBAGE/Spreewaldgurken/Shop/Sport/Sport.html
+++ b/WEBBAGE/Spreewaldgurken/Shop/Sport/Sport.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <title>SpreewaldgurckenGalrie</title>
@@ -7,15 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link href = "Style.css" rel= "stylesheet" type= "text/css" media="all">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <script src="Script.js"></script>
 </head>
-<body>
+<body onload="displaySport()">
 
-<!--navagation-->
 <div class="topnav" id="myTopnav">
     <a href="#" class="active">Home</a>
-    <a href="#">Contact us</a>
+    <a href="#">Contact</a>
     <a href="#">About us</a>
     <a href="#">Konzept</a>
     <div class="dropdown">
@@ -43,25 +41,13 @@
 </div>
 
 
-
-
 <!-- Section A -->
 
-<h3>Contact Form</h3>
+<div id='show'></div><br>
+<input type="button" onclick="previous()" value="<<" />
+<input type="button" onclick="next()" value=">>" />
 
-<div class="container">
-    <form action="">
-        <label for="fname">First Name</label>
-        <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
-        <label for="lname">Last Name</label>
-        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-        <label for="subject">Subject</label>
-        <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-
-        <input type="submit" value="Submit">
-    </form>
-</div>
+<! -- end Section A -->
 
 
 <!-- Section B -->
