--- a/WEBBAGE/Spreewaldgurken/src/Home/index.html
+++ b/WEBBAGE/Spreewaldgurken/src/Home/index.html
@@ -2,43 +2,43 @@
 <html lang="en">
 <head>
     <title>SpreewaldGürken</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link href = "Style.css" rel= "stylesheet" type= "text/css" media="all">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-   <script src="Script.js"></script>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    <link href = "../../css/Style.css" rel= "stylesheet" type= "text/css" media="all"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <script src="../../js/Script.js"></script>
 
 </head>
 <body>
 
-<div class="topnav" id="myTopnav">
-    <a href="#" class="active">Home</a>
-    <a href="#">Contact us</a>
+<nav class="topnav" id="myTopnav">
+    <a href="index.html" class="active">Home</a>
+    <a href="../Contact%20us%20/Contact.html">Contact us</a>
     <a href="#">About us</a>
-    <a href="#">Konzept</a>
+    <a href="../Konzept/konzept.html">Konzept</a>
     <div class="dropdown">
-        <button class="dropbtn">Shop
+         <button class="dropbtn"> <a href="../Shop/Home/Shop.html" id="shopee"> Shop </a>
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
             <a href="#">Special offers</a>
-            <a href="#">Daytrip</a>
-            <a href="#">Holliday</a>
-            <a href="#">Sport</a>
+            <a href="../Shop/Dailytrip/Dailytrip.html">Daytrip</a>
+            <a href="../Shop/Hollydays/Hollydays.html">Holliday</a>
+            <a href="../Shop/Sport/Sport.html">Sport</a>
         </div>
     </div>
     <div class="dropdown">
-        <button class="dropbtn">About the region
+        <button class="dropbtn"> About the region
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-            <a href="#">fotos</a>
-            <a href="#">video</a>
+            <a href="../Foto/Foto.html">fotos</a>
+            <a href="../Video/video.html">video</a>
             <a href="#">wallpaper</a>
         </div>
     </div>
     <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
-</div>
+</nav>
 
 
 
@@ -48,7 +48,7 @@
 
     <div class="bg-image"> </div>
     <div class="content-wrap">
-        <a href="#" id="logo"><img src="Imges/logo1.png" alt="logo" ></a>
+        <a href="#" id="logo"><img src="../../img/Imges/logo1.png" alt="logo" ></a>
         <h1>Welcome to Tourist Information</h1>
         <p>Would you like to take a well planned trip to tourist locations in Spreewald?
             Save yourself the time and effort as we offer you several packages which include accomodation and transportation at moderate prices to tourist sites at Burg, Lubbenau, Lubben, Calau and Cottbus.
@@ -75,7 +75,7 @@
         <ul>
             <li>
                 <div class="card">
-                    <img src="Imges/G1.png" alt="">
+                    <img src="../../img/Imges/G1.png" alt="">
                     <div class="card-content">
                         <h3 class="card-title">Forest Cycling Tour</h3>
                         <p>We present you the opportunity to enjoy an educational trip through the forest reserve and its surroundings with vintage bycicles that are more than five decades old. Ride through serene enviromnments and enjoy natures awesomeness as you exercise you body too. We have landmark stops where we show you educational videos of tree species and funny animal behavorial videos to help you rejuvenate for the next hurdle. </p>
@@ -84,7 +84,7 @@
             </li>
             <li>
                 <div class="card">
-                    <img src="Imges/G3.png" alt="">
+                    <img src="../../img/Imges/G3.png" alt="">
                     <div class="card-content">
                         <h3 class="card-title">River Boat-ride Tour</h3>
                         <p>We take you on a smooth boat ride along the rivers in the misdst of the forest reserve. This four hour journey on boats through the forest is a purely relaxing trip with ladmark stops for picknicking and education on plant and animal species.</p>
@@ -93,7 +93,7 @@
             </li>
             <li>
                 <div class="card">
-                    <img src="Imges/G2.png" alt="">
+                    <img src="../../img/Imges/G2.png" alt="">
                     <div class="card-content">
                         <h3 class="card-title">Food and Cultural Tourism</h3>
                         <p>Spreewald Gherkin or Cocumber fields are well known in the state of Brandenburg and Germany at large. The richness of soil in Spreewald together with local recipies presents distinguished tasty foods that cannot be found elsewhere.
