--- a/WEBBAGE/Spreewaldgurken/src/Contact us /Contact.html
+++ b/WEBBAGE/Spreewaldgurken/src/Contact us /Contact.html
@@ -1,53 +1,65 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
     <title>SpreewaldgurckenGalrie</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link href = "Style.css" rel= "stylesheet" type= "text/css" media="all">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="Script.js"></script>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link href = "../../css/Style.css" rel= "stylesheet" type= "text/css" media="all"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <script src="../../js/Script.js"></script>
 </head>
-<body onload="displaySport()">
+<body>
 
-<div class="topnav" id="myTopnav">
-    <a href="#" class="active">Home</a>
-    <a href="#">Contact</a>
+<!--navagation-->
+<nav class="topnav" id="myTopnav">
+    <a href="../Home/index.html" class="active">Home</a>
+    <a href="../Contact%20us%20/Contact.html">Contact us</a>
     <a href="#">About us</a>
-    <a href="#">Konzept</a>
+    <a href="../Konzept/konzept.html">Konzept</a>
     <div class="dropdown">
-        <button class="dropbtn">Shop
+        <button class="dropbtn"> <a href="../Shop/Home/Shop.html" id="shopee"> Shop </a>
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
             <a href="#">Special offers</a>
-            <a href="#">Daytrip</a>
-            <a href="#">Holliday</a>
-            <a href="#">Sport</a>
+            <a href="../Shop/Dailytrip/Dailytrip.html">Daytrip</a>
+            <a href="../Shop/Hollydays/Hollydays.html">Holliday</a>
+            <a href="../Shop/Sport/Sport.html">Sport</a>
         </div>
     </div>
     <div class="dropdown">
-        <button class="dropbtn">About the region
+        <button class="dropbtn"> About the region
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-            <a href="#">fotos</a>
-            <a href="#">video</a>
+            <a href="../Foto/Foto.html">fotos</a>
+            <a href="../Video/video.html">video</a>
             <a href="#">wallpaper</a>
         </div>
     </div>
     <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
-</div>
+</nav>
+
+
 
 
 <!-- Section A -->
 
-<div id='show'></div><br>
-<input type="button" onclick="previous()" value="<<" />
-<input type="button" onclick="next()" value=">>" />
+<h3>Contact Form</h3>
 
-<! -- end Section A -->
+<div class="container">
+    <form action="action">
+        <label for="fname">First Name</label>
+        <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+        <label for="lname">Last Name</label>
+        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+        <label for="subject">Subject</label>
+        <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+        <input type="submit" value="Submit">
+    </form>
+</div>
 
 
 <!-- Section B -->
