--- a/WEBBAGE/Spreewaldgurken/src/Konzept/konzept.html
+++ b/WEBBAGE/Spreewaldgurken/src/Konzept/konzept.html
@@ -1,47 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <title>SpreewaldgurckenGalrie</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link href = "Style.css" rel= "stylesheet" type= "text/css" media="all">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-    <script src="Script.js"></script>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link href = "../../css/Style.css" rel= "stylesheet" type= "text/css" media="all"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <script src="../../js/Script.js"></script>
 </head>
 <body>
 
 <!--navagation-->
-<div class="topnav" id="myTopnav">
-    <a href="#" class="active">Home</a>
-    <a href="#">Contact</a>
+<nav class="topnav" id="myTopnav">
+    <a href="../Home/index.html" class="active">Home</a>
+    <a href="../Contact%20us%20/Contact.html">Contact us</a>
     <a href="#">About us</a>
-    <a href="#">Konzept</a>
+    <a href="../Konzept/konzept.html">Konzept</a>
     <div class="dropdown">
-        <button class="dropbtn">Shop
+        <button class="dropbtn"> <a href="../Shop/Home/Shop.html" id="shopee"> Shop </a>
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
             <a href="#">Special offers</a>
-            <a href="#">Daytrip</a>
-            <a href="#">Holliday</a>
-            <a href="#">Sport</a>
+            <a href="../Shop/Dailytrip/Dailytrip.html">Daytrip</a>
+            <a href="../Shop/Hollydays/Hollydays.html">Holliday</a>
+            <a href="../Shop/Sport/Sport.html">Sport</a>
         </div>
     </div>
     <div class="dropdown">
-        <button class="dropbtn">About the region
+        <button class="dropbtn"> About the region
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-            <a href="#">fotos</a>
-            <a href="video.html">video</a>
+            <a href="../Foto/Foto.html">fotos</a>
+            <a href="../Video/video.html">video</a>
             <a href="#">wallpaper</a>
         </div>
     </div>
     <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
-</div>
-
+</nav>
 
 
 
@@ -51,23 +48,23 @@
 <div class="slider">
     <figure>
         <div class="slide">
-            <img src="image/ast-baume-boot-772429.jpg" >
+            <img src="../../img/image/ast-baume-boot-772429.jpg" >
         </div>
 
         <div class="slide">
-            <img src="image/apfel-apple-brille-616835.jpg">
+            <img src="../../img/image/apfel-apple-brille-616835.jpg">
         </div>
 
         <div class="slide">
-            <img src="image/container-diat-einmachglas-279035.jpg">
+            <img src="../../img/image/container-diat-einmachglas-279035.jpg">
         </div>
 
         <div class="slide">
-            <img src="image/essen-frisch-frucht-1656664.jpg">
+            <img src="../../img/image/essen-frisch-frucht-1656664.jpg">
         </div>
 
         <div class="slide">
-            <img src="image/ast-baume-boot-772429.jpg">
+            <img src="../../img/image/ast-baume-boot-772429.jpg">
         </div>
     </figure>
 </div>
