--- a/WEBBAGE/Spreewaldgurken/src/Foto/Foto.html
+++ b/WEBBAGE/Spreewaldgurken/src/Foto/Foto.html
@@ -14,12 +14,10 @@
 
 <!--navagation-->
 <nav class="topnav" id="myTopnav">
-    <a href="../Home/index.html" class="active">Home</a>
-    <a href="../Contact%20us%20/Contact.html">Contact us</a>
-    <a href="#">About us</a>
-    <a href="../Konzept/konzept.html">Konzept</a>
+    <a href="index.html" class="active">Home</a>
+
     <div class="dropdown">
-        <button class="dropbtn"> <a href="../Shop/Home/Shop.html" id="shopee"> Shop </a>
+        <button class="dropbtn"> <a href="../Shop/Home/Shop.html" id="shopee"> Packages </a>
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
@@ -39,6 +37,8 @@
             <a href="#">wallpaper</a>
         </div>
     </div>
+    <a href="../Konzept/konzept.html">About us</a>
+    <a href="../Contact%20us%20/Contact.html">Contact us</a>
     <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </nav>
 
@@ -46,34 +46,34 @@
 
 
 <!-- Section A -->
-<section a class="galarie">
+<header a class="galarie">
 <div class="row">
     <div class="column">
-        <img src="../../img/images/11.png" style="width:100%">
-        <img src="../../img/images/1.jpg" style="width:100%">
-        <img src="../../img/images/22.png" style="width:100%">
+        <img src="../../img/images/11.png" style="width:100%" alt="">
+        <img src="../../img/images/1.jpg" style="width:100%" alt="">
+        <img src="../../img/images/22.png" style="width:100%" alt="">
 
 
     </div>
     <div class="column">
-        <img src="../../img/images/33.png" style="width:100%">
-        <img src="../../img/images/2.jpg" style="width:100%">
-        <img src="../../img/images/3.jpg" style="width:100%">
+        <img src="../../img/images/33.png" style="width:100%" alt="">
+        <img src="../../img/images/2.jpg" style="width:100%" alt="">
+        <img src="../../img/images/3.jpg" style="width:100%" alt="">
 
     </div>
     <div class="column">
-        <img src="../../img/images/4.jpeg" style="width:100%">
-        <img src="../../img/images/55.png" style="width:100%">
-        <img src="../../img/images/5.jpg" style="width:100%">
+        <img src="../../img/images/4.jpeg" style="width:100%" alt="">
+        <img src="../../img/images/55.png" style="width:100%" alt="">
+        <img src="../../img/images/5.jpg" style="width:100%" alt="">
     </div>
     <div class="column">
-        <img src="../../img/images/33.png" style="width:100%">
-        <img src="../../img/images/6.jpg" style="width:100%">
-        <img src="../../img/images/7.jpg" style="width:100%">
+        <img src="../../img/images/33.png" style="width:100%" alt="">
+        <img src="../../img/images/6.jpg" style="width:100%" alt="">
+        <img src="../../img/images/7.jpg" style="width:100%" alt="">
 
     </div>
 </div>
-</section>
+</header>
 
 
 <!-- Section B -->
