--- a/WEBBAGE/Spreewaldgurken/src/Shop/Sport/Sport.html
+++ b/WEBBAGE/Spreewaldgurken/src/Shop/Sport/Sport.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
     <title>SpreewaldgurckenGalrie</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link href = "Style.css" rel= "stylesheet" type= "text/css" media="all">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="Script.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link href = "../../../css/StyleShop.css" rel= "stylesheet" type= "text/css" media="all"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <script src="../../../js/Script.js"></script>
 </head>
 <body onload="displaySport()">
 
@@ -47,7 +46,7 @@
 <input type="button" onclick="previous()" value="<<" />
 <input type="button" onclick="next()" value=">>" />
 
-<! -- end Section A -->
+<!-- end Section A -->
 
 
 <!-- Section B -->
