--- a/WEBBAGE/Spreewaldgurken/src/Konzept/konzept.html
+++ b/WEBBAGE/Spreewaldgurken/src/Konzept/konzept.html
@@ -12,12 +12,10 @@
 
 <!--navagation-->
 <nav class="topnav" id="myTopnav">
-    <a href="../Home/index.html" class="active">Home</a>
-    <a href="../Contact%20us%20/Contact.html">Contact us</a>
-    <a href="#">About us</a>
-    <a href="../Konzept/konzept.html">Konzept</a>
+    <a href="index.html" class="active">Home</a>
+
     <div class="dropdown">
-        <button class="dropbtn"> <a href="../Shop/Home/Shop.html" id="shopee"> Shop </a>
+        <button class="dropbtn"> <a href="../Shop/Home/Shop.html" id="shopee"> Packages </a>
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
@@ -37,6 +35,8 @@
             <a href="#">wallpaper</a>
         </div>
     </div>
+    <a href="../Konzept/konzept.html">About us</a>
+    <a href="../Contact%20us%20/Contact.html">Contact us</a>
     <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </nav>
 
@@ -45,31 +45,31 @@
 <!-- Section A -->
 
 
-<div class="slider">
+<header class="slider">
     <figure>
         <div class="slide">
-            <img src="../../img/image/ast-baume-boot-772429.jpg" >
+            <img src="../../img/image/ast-baume-boot-772429.jpg" alt="" >
         </div>
 
         <div class="slide">
-            <img src="../../img/image/apfel-apple-brille-616835.jpg">
+            <img src="../../img/image/apfel-apple-brille-616835.jpg" alt="" >
         </div>
 
         <div class="slide">
-            <img src="../../img/image/container-diat-einmachglas-279035.jpg">
+            <img src="../../img/image/container-diat-einmachglas-279035.jpg" alt="" >
         </div>
 
         <div class="slide">
-            <img src="../../img/image/essen-frisch-frucht-1656664.jpg">
+            <img src="../../img/image/essen-frisch-frucht-1656664.jpg" alt="" >
         </div>
 
         <div class="slide">
-            <img src="../../img/image/ast-baume-boot-772429.jpg">
+            <img src="../../img/image/ast-baume-boot-772429.jpg" alt="" >
         </div>
     </figure>
-</div>
+</header>
 
-<!-- Section C -->
+<!-- Section B -->
 <section id="section-c" class="grid">
     <div class="content-wrap">
         <h2 class="content-title">Spreewald - Konzept</h2>
