--- a/WEBBAGE/Spreewaldgurken/src/Video/video.html
+++ b/WEBBAGE/Spreewaldgurken/src/Video/video.html
@@ -3,7 +3,6 @@
 <head>
     <title>SpreewaldgurckenGalrie</title>
     <meta charset="utf-8">
-    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href = "../../css/Style.css" rel= "stylesheet" type= "text/css" media="all"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
@@ -13,12 +12,10 @@
 
 <!--navagation-->
 <nav class="topnav" id="myTopnav">
-    <a href="../Home/index.html" class="active">Home</a>
-    <a href="../Contact%20us%20/Contact.html">Contact us</a>
-    <a href="#">About us</a>
-    <a href="../Konzept/konzept.html">Konzept</a>
+    <a href="index.html" class="active">Home</a>
+
     <div class="dropdown">
-        <button class="dropbtn"> <a href="../Shop/Home/Shop.html" id="shopee"> Shop </a>
+        <button class="dropbtn"> <a href="../Shop/Home/Shop.html" id="shopee"> Packages </a>
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
@@ -38,6 +35,8 @@
             <a href="#">wallpaper</a>
         </div>
     </div>
+    <a href="../Konzept/konzept.html">About us</a>
+    <a href="../Contact%20us%20/Contact.html">Contact us</a>
     <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </nav>
 
@@ -46,9 +45,9 @@
 
 <!-- Section A -->
 
-<div class="videoWrapper">
+<header class="videoWrapper">
     <iframe width="460" height="315" src="https://www.youtube.com/embed/qur0DjGMn5c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
+</header>
 
 
 <!-- Section B -->
