--- a/WEBBAGE/Spreewaldgurken/src/Contact us /Contact.html
+++ b/WEBBAGE/Spreewaldgurken/src/Contact us /Contact.html
@@ -13,7 +13,7 @@
 
 <!--navagation-->
 <nav class="topnav" id="myTopnav">
-    <a href="index.html" class="active">Home</a>
+    <a href="../Home/index.html" class="active">Home</a>
 
     <div class="dropdown">
         <button class="dropbtn"> <a href="../Shop/Home/Shop.html" id="shopee"> Packages </a>
