--- a/WEBBAGE/Spreewaldgurken/src/Konzept/konzept.html
+++ b/WEBBAGE/Spreewaldgurken/src/Konzept/konzept.html
@@ -12,7 +12,7 @@
 
 <!--navagation-->
 <nav class="topnav" id="myTopnav">
-    <a href="index.html" class="active">Home</a>
+    <a href="../Home/index.html" class="active">Home</a>
 
     <div class="dropdown">
         <button class="dropbtn"> <a href="../Shop/Home/Shop.html" id="shopee"> Packages </a>
@@ -39,7 +39,6 @@
     <a href="../Contact%20us%20/Contact.html">Contact us</a>
     <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </nav>
-
 
 
 <!-- Section A -->
