--- a/WEBBAGE/Spreewaldgurken/src/Shop/Hollydays/Hollydays.html
+++ b/WEBBAGE/Spreewaldgurken/src/Shop/Hollydays/Hollydays.html
@@ -13,34 +13,33 @@
 <body onload="displayHoliday()">
 
 <!--navagation-->
-<div class="topnav" id="myTopnav">
-    <a href="#" class="active">Home</a>
-    <a href="#">Contact</a>
-    <a href="#">About us</a>
-    <a href="#">Konzept</a>
+<nav class="topnav" id="myTopnav">
+    <a href="../../Home/index.html" class="active">Home</a>
     <div class="dropdown">
-        <button class="dropbtn">Shop
+        <button class="dropbtn"> <a href="../Home/Shop.html" id="shopee"> Shop </a>
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
             <a href="#">Special offers</a>
-            <a href="#">Daytrip</a>
-            <a href="#">Holliday</a>
-            <a href="#">Sport</a>
+            <a href="../Dailytrip/Dailytrip.html">Daytrip</a>
+            <a href="../Hollydays/Hollydays.html">Holliday</a>
+            <a href="../Sport/Sport.html">Sport</a>
         </div>
     </div>
     <div class="dropdown">
-        <button class="dropbtn">About the region
+        <button class="dropbtn"> About the region
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-            <a href="#">fotos</a>
-            <a href="video.html">video</a>
+            <a href="../../Foto/Foto.html">fotos</a>
+            <a href="../../Video/video.html">video</a>
             <a href="#">wallpaper</a>
         </div>
     </div>
+    <a href="../../Contact%20us%20/Contact.html">Contact us</a>
+    <a href="../../Konzept/konzept.html">About us</a>
     <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
-</div>
+</nav>
 
 
 
