--- a/WEBBAGE/Spreewaldgurken/src/Shop/Sport/Sport.html
+++ b/WEBBAGE/Spreewaldgurken/src/Shop/Sport/Sport.html
@@ -12,9 +12,6 @@
 
 <nav class="topnav" id="myTopnav">
     <a href="../../Home/index.html" class="active">Home</a>
-    <a href="../../Contact%20us%20/Contact.html">Contact us</a>
-    <a href="#">About us</a>
-    <a href="../../Konzept/konzept.html">Konzept</a>
     <div class="dropdown">
         <button class="dropbtn"> <a href="../Home/Shop.html" id="shopee"> Shop </a>
             <i class="fa fa-caret-down"></i>
@@ -36,6 +33,8 @@
             <a href="#">wallpaper</a>
         </div>
     </div>
+    <a href="../../Contact%20us%20/Contact.html">Contact us</a>
+    <a href="../../Konzept/konzept.html">About us</a>
     <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </nav>
 
