--- a/WEBBAGE/Spreewaldgurken/src/Contact us /Contact.html
+++ b/WEBBAGE/Spreewaldgurken/src/Contact us /Contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href = "../../css/Style.css" rel= "stylesheet" type= "text/css" media="all"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-  <!--  <script src="../../js/Script.js"></script> -->
+   <!-- <script src="../../js/Script.js"></script> -->
     <script src="Script.js"></script>
 </head>
 <body onload="displayINFO()">
@@ -36,7 +36,7 @@
             <a href="#">wallpaper</a>
         </div>
     </div>
-    <a href="../Konzept/konzept.html">About us</a>
+    <a href="../AboutUs/AboutUs.html">About us</a>
     <a href="../Contact%20us%20/Contact.html">Contact us</a>
     <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </nav>
