--- a/WEBBAGE/Spreewaldgurken/src/Shop/Dailytrip/Dailytrip.html
+++ b/WEBBAGE/Spreewaldgurken/src/Shop/Dailytrip/Dailytrip.html
@@ -14,7 +14,7 @@
 <nav class="topnav" id="myTopnav">
     <a href="../../Home/index.html" class="active">Home</a>
     <div class="dropdown">
-        <button class="dropbtn"> <a href="../Home/Shop.html" id="shopee"> Shop </a>
+        <button class="dropbtn"> <a href="../Home/Shop.html" id="shopee"> Packages </a>
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
@@ -34,8 +34,9 @@
             <a href="#">wallpaper</a>
         </div>
     </div>
+    <a href="../../AboutUs/AboutUs.html">About us</a>
     <a href="../../Contact%20us%20/Contact.html">Contact us</a>
-    <a href="../../Konzept/konzept.html">About us</a>
+
     <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </nav>
 
