--- a/WEBBAGE/Spreewaldgurken/src/Video/video.html
+++ b/WEBBAGE/Spreewaldgurken/src/Video/video.html
@@ -35,7 +35,7 @@
             <a href="#">wallpaper</a>
         </div>
     </div>
-    <a href="../Konzept/konzept.html">About us</a>
+    <a href="../AboutUs/AboutUs.html">About us</a>
     <a href="../Contact%20us%20/Contact.html">Contact us</a>
     <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </nav>
