SVG+SHOP+NavJavaScript

--- a/WEBBAGE/Spreewaldgurken/src/Contact us /Contact.html
+++ b/WEBBAGE/Spreewaldgurken/src/Contact us /Contact.html
@@ -64,16 +64,16 @@
 <!-- Section B -->
 
 
-<section id="section-c" class="grid">
+<main id="section-c" class="grid">
     <div class="content-wrap">
         <h2 class="content-title"> wir freuen uns auf ihre Kontakt</h2>
         <div id='show'></div>
         <!--<p> Swap the noise of the city for the rich sounds of nature. Come to the holiday in the Spreewald. In just a few hours, the best conditions for a journey to yourself. Discover your inner balance in the midst of nature. A Spreewald vacation has many faces. Whether active by bike or directly with the paddle boat on the classic waterways of the region. Time will come to life in the Spreewald. Do you keep moving on holiday? The region offers relaxation in wellness and SPA in comfortable hotels, not only in the spontaneous break and short break ...</p> -->
     </div>
-</section>
+</main>
 
 <!-- Section C -->
-<main id="main">
+<div id="main">
     <section id="section-d" class="grid">
         <div class="box">
             <h2 class="content-title">Contact Us</h2>
@@ -86,7 +86,7 @@
             <p>You are on holiday in the Spreewald for the first time and do not know what you can do in your spare time? The tips below will help you plan your trip to the Spreewald better. Because in addition to paddling, cycling and the popular boat trips, there are many more recreational opportunities and destinations to discover.</p>
         </div>
     </section>
-</main>
+</div>
 
 
 
