--- a/WEBBAGE/Spreewaldgurken/src/AboutUs/AboutUs.html
+++ b/WEBBAGE/Spreewaldgurken/src/AboutUs/AboutUs.html
@@ -37,7 +37,8 @@
     </div>
     <a href="../AboutUs/AboutUs.html">About us</a>
     <a href="../Contact%20us%20/Contact.html">Contact us</a>
-    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+
+    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()">&#9776;</a>
 </nav>
 
 
@@ -69,16 +70,16 @@
 </header>
 
 <!-- Section B -->
-<section id="section-c" class="grid">
+<main id="section-c" class="grid">
     <div class="content-wrap">
         <h2 class="content-title">Spreewald - Konzept</h2>
         <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias atque aut beatae consectetur, cumque dolor ducimus error excepturi explicabo fuga iste magni neque, pariatur quas rem temporibus totam. Aperiam architecto, cupiditate deleniti deserunt expedita facere fugit impedit perspiciatis quam similique sint tempore vitae voluptate voluptates voluptatibus. Amet aut dolorum ducimus, ipsa mollitia nobis reiciendis reprehenderit sed soluta tempora voluptate, voluptates? Swap the noise of the city for the rich sounds of nature. Come to the holiday in the Spreewald. In just a few hours, the best conditions for a journey to yourself. Discover your inner balance in the midst of nature. A Spreewald vacation has many faces. Whether active by bike or directly with the paddle boat on the classic waterways of the region. Time will come to life in the Spreewald. Do you keep moving on holiday? The region offers relaxation in wellness and SPA in comfortable hotels, not only in the spontaneous break and short break ...</p>
     </div>
-</section>
+</main>
 
 
 <!-- Section C-->
-<main id="main">
+<div id="main">
     <section id="section-d" class="grid">
         <div class="box">
             <h2 class="content-title">Contact Us</h2>
@@ -91,7 +92,7 @@
             <p>You are on holiday in the Spreewald for the first time and do not know what you can do in your spare time? The tips below will help you plan your trip to the Spreewald better. Because in addition to paddling, cycling and the popular boat trips, there are many more recreational opportunities and destinations to discover.</p>
         </div>
     </section>
-</main>
+</div>
 
 <!-- Footer -->
 <footer id="main-footer" class="grid">
