--- a/WEBBAGE/Spreewaldgurken/src/Video/video.html
+++ b/WEBBAGE/Spreewaldgurken/src/Video/video.html
@@ -37,7 +37,7 @@
     </div>
     <a href="../AboutUs/AboutUs.html">About us</a>
     <a href="../Contact%20us%20/Contact.html">Contact us</a>
-    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()">&#9776;</a>
 </nav>
 
 
