Special offer und neue Foto

--- a/WEBBAGE/Spreewaldgurken/src/AboutUs/AboutUs.html
+++ b/WEBBAGE/Spreewaldgurken/src/AboutUs/AboutUs.html
@@ -19,7 +19,7 @@
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-            <a href="#">Special offers</a>
+            <a href="../Shop/Special%20offers/SpecialOffers.html">Special offers</a>
             <a href="../Shop/Dailytrip/Dailytrip.html">Daytrip</a>
             <a href="../Shop/Hollydays/Hollydays.html">Holliday</a>
             <a href="../Shop/Sport/Sport.html">Sport</a>
