--- a/WEBBAGE/Spreewaldgurken/src/Shop/Dailytrip/Dailytrip.html
+++ b/WEBBAGE/Spreewaldgurken/src/Shop/Dailytrip/Dailytrip.html
@@ -18,7 +18,7 @@
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-            <a href="#">Special offers</a>
+            <a href="../Special%20offers/SpecialOffers.html">Special offers</a>
             <a href="../Dailytrip/Dailytrip.html">Daytrip</a>
             <a href="../Hollydays/Hollydays.html">Holliday</a>
             <a href="../Sport/Sport.html">Sport</a>
@@ -52,7 +52,6 @@
     <div>  <table id="demo"></table></div>
 
 </main>
-
     <div class="content-wrap">
         <h2 class="content-title"> wir freuen uns auf ihre Kontakt</h2>
        <!-- <p> Swap the noise of the city for the rich sounds of nature. Come to the holiday in the Spreewald. In just a few hours, the best conditions for a journey to yourself. Discover your inner balance in the midst of nature. A Spreewald vacation has many faces. Whether active by bike or directly with the paddle boat on the classic waterways of the region. Time will come to life in the Spreewald. Do you keep moving on holiday? The region offers relaxation in wellness and SPA in comfortable hotels, not only in the spontaneous break and short break ...</p> -->
