--- a/WEBBAGE/Spreewaldgurken/src/Shop/Home/Shop.html
+++ b/WEBBAGE/Spreewaldgurken/src/Shop/Home/Shop.html
@@ -18,7 +18,7 @@
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-            <a href="#">Special offers</a>
+            <a href="../Special%20offers/SpecialOffers.html">Special offers</a>
             <a href="../Dailytrip/Dailytrip.html">Daytrip</a>
             <a href="../Hollydays/Hollydays.html">Holliday</a>
             <a href="../Sport/Sport.html">Sport</a>
@@ -47,7 +47,7 @@
 <div class="Wrapper1">
     <div class="boxe boxe1" >
         <div> promotion und Special offers </div>
-        <div> <a href="#" class="linken" >  <img src="../../../img/Neuer%20Ordner/cucumber.svg" alt=""  class="cucumber" height="100px" width="100px"> </a> </div>
+        <div> <a href="../Special%20offers/SpecialOffers.html" class="linken" >  <img src="../../../img/Neuer%20Ordner/cucumber.svg" alt=""  class="cucumber" height="100px" width="100px"> </a> </div>
     </div>
     <div class="boxe boxe2" >
         <div> Daytrip </div>
