--- a/WEBBAGE/Spreewaldgurken/src/Shop/Sport/Sport.html
+++ b/WEBBAGE/Spreewaldgurken/src/Shop/Sport/Sport.html
@@ -17,7 +17,7 @@
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-            <a href="#">Special offers</a>
+            <a href="../Special%20offers/SpecialOffers.html">Special offers</a>
             <a href="../Dailytrip/Dailytrip.html">Daytrip</a>
             <a href="../Hollydays/Hollydays.html">Holliday</a>
             <a href="../Sport/Sport.html">Sport</a>
