--- a/WEBBAGE/Spreewaldgurken/src/Foto/Foto.html
+++ b/WEBBAGE/Spreewaldgurken/src/Foto/Foto.html
@@ -21,7 +21,7 @@
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-            <a href="#">Special offers</a>
+            <a href="../Shop/Special%20offers/SpecialOffers.html">Special offers</a>
             <a href="../Shop/Dailytrip/Dailytrip.html">Daytrip</a>
             <a href="../Shop/Hollydays/Hollydays.html">Holliday</a>
             <a href="../Shop/Sport/Sport.html">Sport</a>
@@ -49,21 +49,21 @@
 <header a class="galarie">
 <div class="row">
     <div class="column">
-        <img src="../../img/images/11.png" style="width:100%" alt="">
+        <img src="../../img/images/12.jpg" style="width:100%" alt="">
         <img src="../../img/images/1.jpg" style="width:100%" alt="">
-        <img src="../../img/images/22.png" style="width:100%" alt="">
+        <img src="../../img/images/13.jpg" style="width:100%" alt="">
 
 
     </div>
     <div class="column">
-        <img src="../../img/images/33.png" style="width:100%" alt="">
+        <img src="../../img/images/14.jpg" style="width:100%" alt="">
         <img src="../../img/images/2.jpg" style="width:100%" alt="">
         <img src="../../img/images/3.jpg" style="width:100%" alt="">
 
     </div>
     <div class="column">
         <img src="../../img/images/4.jpeg" style="width:100%" alt="">
-        <img src="../../img/images/55.png" style="width:100%" alt="">
+        <img src="../../img/images/15.jpg" style="width:100%" alt="">
         <img src="../../img/images/5.jpg" style="width:100%" alt="">
     </div>
     <div class="column">
