--- a/WEBBAGE/Spreewaldgurken/src/Shop/Special offers/SpecialOffers.html
+++ b/WEBBAGE/Spreewaldgurken/src/Shop/Special offers/SpecialOffers.html
@@ -75,7 +75,7 @@
 
                          Tip: Not all harbors offer daily winter barge rides in the low season. Therefore, we recommend prior to your arrival to the ports with Glühweinkahnfahrten in Spreewald after departure times or to ask for individual tours.You can find all these offers in sports
         </p>
-        <a href="#section-b" class="btn">Read More</a>
+        <a href="../Sport/Sport.html" class="btn">Read More</a>
     </div>
 </div>
 
