new prototype with changes ongoing
i changed the feel

--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <h1>SpreewaldGurken</h1>
-<meta http-equiv="refresh" content="0; url=https://kostoele.github.io/shiny-pancake/WEBBAGE/Spreewaldgurken/src/Home/index.html" />
+<meta http-equiv="refresh" content="0; url=https://kostoele.github.io/shiny-pancake/Spreewaldgurken 1.0/src/Home/index.html" />
